fix: revert align middle on toggle buttons

--- a/src/layout/sidebar-components/_titlebox.scss
+++ b/src/layout/sidebar-components/_titlebox.scss
@@ -41,8 +41,6 @@
   }
 
   .res-fancy-toggle-button {
-    display: inline-block;
-    vertical-align: middle;
     &.RESDashboardToggle,
     &.RESshortcutside {
       @include v.button(false, true);
@@ -62,8 +60,6 @@
   }
 
   .fancy-toggle-button {
-    display: inline-block;
-    vertical-align: middle;
     margin: 0;
     .active {
       @include v.button(true, true);
